Version 1.19.3 *
==================
- added system log messages for check for update
- fixed empty Help View when using Studio on macOS with Apple silicon (ARM)
- fixed Studio Windows package does not contain `libcrypto` and `libssl`
- fixed copying code to clipboard in GAMS Documentation Help view
- fixed wrong project executed after jumping to a bookmark
- fixed crash when closing GAMS Studio

Version 1.19.2
==================
- fixed usage of ISO-8859-1 for license file paths on Windows
- fixed unsorted files in project subfolder
- fixed closing Connect editor and Studio on saving connect file
- fixed Studio version information on macOS (Info.plist)
- fixed Welcome Page link to the [GAMS Forum](https://forum.gams.com/)
- fixed labels containing `Gams` instead of `GAMS`
- fixed System log crash when updated from another thread, e.g. via check for update
- improved plain text views for Connect and Solver Option editor by using a fixed font
- improved always enable the remind me later button of the check for update widget
- improved license file line separator and trailing whitespaces

Version 1.19.1
==================
- added allow to delete files from the Project Explorer
- added system and version information to the log (created via `--log`)
- added additional logging for license installation
- added settings option to switch system logging on/off
- added information about disabled check for update at startup
- fixed invalid error mark when the LST file contains wrong position information
- fixed initialization and validation of options created from Connect schema in Connect Editor
- fixed adding only required options in Connect Editor
- fixed saving file in Connect Editor after an edit finished with a mouse click
- fixed crash and blocking on macOS after interrupting a GAMS run
- improved license text for time limited licenses
- improved create a system log file by default and new parameter "--no-log" to deactivate it